--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         <div class="box">
           <div class="imgBx">
-            <img src="/images/menu2.jpg" alt="" />
+            <img src="images/menu2.jpg" alt="" />
           </div>
           <div class="text">
             <h3>Special Soup</h3>
@@ -82,7 +82,7 @@
         </div>
         <div class="box">
           <div class="imgBx">
-            <img src="/images/menu3.jpg" alt="" />
+            <img src="images/menu3.jpg" alt="" />
           </div>
           <div class="text">
             <h3>Special Pasta</h3>
