--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="col50">
           <div class="imgBx">
-            <img src="/images/img1.jpg" alt="" />
+            <img src="images/img1.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -66,7 +66,7 @@
       <div class="content">
         <div class="box">
           <div class="imgBx">
-            <img src="/images/menu1.jpg" alt="" />
+            <img src="images/menu1.jpg" alt="" />
           </div>
           <div class="text">
             <h3>Special Salads</h3>
@@ -90,7 +90,7 @@
         </div>
         <div class="box">
           <div class="imgBx">
-            <img src="/images/menu5.jpg" alt="" />
+            <img src="images/menu5.jpg" alt="" />
           </div>
           <div class="text">
             <h3>Special Salads</h3>
@@ -98,7 +98,7 @@
         </div>
         <div class="box">
           <div class="imgBx">
-            <img src="/images/menu6.jpg" alt="" />
+            <img src="images/menu6.jpg" alt="" />
           </div>
           <div class="text">
             <h3>Special Salads</h3>
@@ -106,7 +106,7 @@
         </div>
         <div class="box">
           <div class="imgBx">
-            <img src="/images/menu6.jpg" alt="" />
+            <img src="images/menu6.jpg" alt="" />
           </div>
           <div class="text">
             <h3>Special Salads</h3>
@@ -125,7 +125,7 @@
       <div class="content">
         <div class="box">
           <div class="imgBx">
-            <img src="/images/expert1.jpg" alt="" />
+            <img src="images/expert1.jpg" alt="" />
           </div>
           <div class="text">
             <h3>Someone Famous</h3>
@@ -133,7 +133,7 @@
         </div>
         <div class="box">
           <div class="imgBx">
-            <img src="/images/expert2.jpg" alt="" />
+            <img src="images/expert2.jpg" alt="" />
           </div>
           <div class="text">
             <h3>Someone Famous</h3>
@@ -141,7 +141,7 @@
         </div>
         <div class="box">
           <div class="imgBx">
-            <img src="/images/expert3.jpg" alt="" />
+            <img src="images/expert3.jpg" alt="" />
           </div>
           <div class="text">
             <h3>Someone Famous</h3>
@@ -149,7 +149,7 @@
         </div>
         <div class="box">
           <div class="imgBx">
-            <img src="/images/expert4.jpg" alt="" />
+            <img src="images/expert4.jpg" alt="" />
           </div>
           <div class="text">
             <h3>Someone Famous</h3>
@@ -165,7 +165,7 @@
       <div class="content">
         <div class="box">
           <div class="imgBx">
-            <img src="/images/testi1.jpg" alt="" />
+            <img src="images/testi1.jpg" alt="" />
           </div>
           <div class="text">
             <p>
@@ -178,7 +178,7 @@
         </div>
         <div class="box">
           <div class="imgBx">
-            <img src="/images/testi2.jpg" alt="" />
+            <img src="images/testi2.jpg" alt="" />
           </div>
           <div class="text">
             <p>
@@ -191,7 +191,7 @@
         </div>
         <div class="box">
           <div class="imgBx">
-            <img src="/images/testi3.jpg" alt="" />
+            <img src="images/testi3.jpg" alt="" />
           </div>
           <div class="text">
             <p>
